# DominoRest

./: .gitignore  CMakeLists.txt  Dockerfile  auth_handler.cpp  auth_handler.h  board_generator.cpp  board_generator.h  db_handler.cpp  db_handler.h  domino.cpp  domino.h  domino_solver.h  main  main.cpp  print_utils.cpp  print_utils.h  puzzle_solver.cpp  puzzle_solver.h  utils.cpp  utils.h
crow/: CMakeLists.txt  mkdocs.yml
crow/docs/guides/: syste.md
crow/examples/: example.cpp  example_static_file.cpp  example_vs.cpp  example_with_all.cpp
crow/include/crow/: app.h  http_parser_merged.h  http_response.h  http_server.h  routing.h  settings.h
crow/scripts/: generateDocumentationAndDeploy.sh
crow/tests/: unittest.cpp
crow/tests/multi_file/: main.cpp
tests/: test_auth_handler.cpp  test_board_generator.cpp  test_db_handler.cpp  test_print_utils.cpp  test_puzzle_solver.cpp  test_utils.cpp
